--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="btn-container">
                 <button 
                 class="btn btn-color-2"
-                onclick="window.open('./wesbite/resume.pdf')">Resume
+                onclick="window.open('./wesbite/Chloe_Harrison_Resume.pdf')">Resume
                 </button>
                 <button 
                 class="btn btn-color-1"
@@ -85,7 +85,7 @@
                         class="icon"
                         />
                         <h3>Education</h3>
-                        <p>Sophomore at Fordham University 
+                        <p>Junor at Fordham University 
                             <br> Pursuing B.S. in Computer Science
                         </p>
                     </div>
@@ -97,8 +97,6 @@
                         <h3>Activites</h3>
                         <p>Women's Club Squash
                             <br> Girls Who Code
-                            <br> Blockchain and Fintech Club
-                            <br> Photography Club
                         </p>
                     </div>
                 </div>
@@ -125,7 +123,7 @@
                             />
                             <div>
                                 <h3>HTML</h3>
-                                <p>Intermediate</p>
+                                <p>Advanced</p>
                             </div>
                         </article>
                         <article>
@@ -135,7 +133,7 @@
                             />
                             <div>
                                 <h3>CSS</h3>
-                                <p>Intermediate</p>
+                                <p>Advanced</p>
                             </div>
                         </article>
                         <article>
@@ -155,7 +153,7 @@
                             />
                             <div>
                                 <h3>C++</h3>
-                                <p>Intermediate</p>
+                                <p>Advanced</p>
                             </div>
                         </article>
                         <article>
@@ -165,7 +163,7 @@
                             />
                             <div>
                                 <h3>Python</h3>
-                                <p>Basic</p>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
@@ -175,7 +173,17 @@
                             />
                             <div>
                                 <h3>JavaScript</h3>
-                                <p>Basic</p>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./wesbite/check-mark.png"
+                            alt="experience"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>SQL</h3>
+                                <p>Advanced</p>
                             </div>
                         </article>
                     </div>
