--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="profile">
         <div class="section__pic-container">
             <img 
-            src="./wesbite/profile-pic.PNG" alt="Chloe profile-pic"
+            src="wesbite/profile-pic.PNG" alt="Chloe profile-pic"
             />
         </div>
         <div class="section__text">
