--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="btn-container">
                 <button 
                 class="btn btn-color-2"
-                onclick="window.open('./wesbite/Chloe_Harrison_Resume.pdf')">Resume
+                onclick="window.open('wesbite/Chloe_Harrison_Resume.pdf')">Resume
                 </button>
                 <button 
                 class="btn btn-color-1"
@@ -55,12 +55,12 @@
             </div>
             <div id="socials-container">
                 <img
-                src="./wesbite/linkedin.png" alt="linkedin"
+                src="wesbite/linkedin.png" alt="linkedin"
                 class="icon" 
                 onclick="location.href='https://www.linkedin.com/in/chloe-harrison-4317472a7/'"
                 />
                 <img 
-                src="./wesbite/github.png" alt="github"
+                src="wesbite/github.png" alt="github"
                 class="icon" 
                 onclick="location.href='https://github.com/chloe0206'"
                 />
@@ -80,7 +80,7 @@
             <div class="about-details-container">
                 <div class="about-containers">
                     <div class="details-containers">
-                        <img src="./wesbite/education.png" 
+                        <img src="wesbite/education.png" 
                         alt="education icon" 
                         class="icon"
                         />
@@ -90,7 +90,7 @@
                         </p>
                     </div>
                     <div class="details-containers">
-                        <img src="./wesbite/star.png"
+                        <img src="wesbite/star.png"
                         alt="star"
                         class="icon"
                         />
@@ -117,7 +117,7 @@
                     <h2 class="experience-sub-title">Frontend Development</h2>
                     <div class="article-container">
                         <article>
-                            <img src="./wesbite/check-mark.png"
+                            <img src="wesbite/check-mark.png"
                             alt="experience"
                             class="icon"
                             />
@@ -127,7 +127,7 @@
                             </div>
                         </article>
                         <article>
-                            <img src="./wesbite/check-mark.png"
+                            <img src="wesbite/check-mark.png"
                             alt="experience"
                             class="icon"
                             />
@@ -137,7 +137,7 @@
                             </div>
                         </article>
                         <article>
-                            <img src="./wesbite/check-mark.png"
+                            <img src="wesbite/check-mark.png"
                             alt="experience"
                             class="icon"
                             />
@@ -147,7 +147,7 @@
                             </div>
                         </article>
                         <article>
-                            <img src="./wesbite/check-mark.png"
+                            <img src="wesbite/check-mark.png"
                             alt="experience"
                             class="icon"
                             />
@@ -157,7 +157,7 @@
                             </div>
                         </article>
                         <article>
-                            <img src="./wesbite/check-mark.png"
+                            <img src="wesbite/check-mark.png"
                             alt="experience"
                             class="icon"
                             />
@@ -167,7 +167,7 @@
                             </div>
                         </article>
                         <article>
-                            <img src="./wesbite/check-mark.png"
+                            <img src="wesbite/check-mark.png"
                             alt="experience"
                             class="icon"
                             />
@@ -177,7 +177,7 @@
                             </div>
                         </article>
                         <article>
-                            <img src="./wesbite/check-mark.png"
+                            <img src="wesbite/check-mark.png"
                             alt="experience"
                             class="icon"
                             />
@@ -225,7 +225,7 @@
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
                 <img 
-                src="./wesbite/email.png"
+                src="wesbite/email.png"
                 alt="email icon"
                 class="icon contact-icon"
                 />
